--- a/index.html
+++ b/index.html
@@ -1,65 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sujan Narayanan Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sujan Narayanan - Cybersecurity & IoT Enthusiast</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Sujan Narayanan</h1>
-    <p>Cybersecurity & IoT Student | Tech Enthusiast</p>
-  </header>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#projects">Projects</a>
-    <a href="#achievements">Achievements</a>
-    <a href="#contact">Contact</a>
-  </nav>
+    <header id="home">
+        <div class="hero">
+            <h1>Sujan Narayanan</h1>
+            <p>Cybersecurity & IoT Enthusiast</p>
+            <a href="#projects" class="cta-button">View My Work</a>
+        </div>
+    </header>
 
-  <section id="home">
-    <h2>About Me</h2>
-    <p>
-      I am a highly motivated undergraduate pursuing a B.Tech in Cybersecurity and IoT at Sri Ramachandra Institute of Higher Education and Research. I'm passionate about Cyber Security, Blockchain, Full Stack Development, and AI. Always eager to learn and take on new challenges.
-    </p>
-  </section>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>Hi, I'm Sujan, an enthusiastic B.Tech student specializing in Cybersecurity and IoT at Sri Ramachandra Institute of Higher Education and Research.</p>
+                    <p>I'm deeply passionate about exploring cutting-edge technologies like Cybersecurity, Machine Learning, Blockchain, and Full Stack Development. I'm constantly building and experimenting with projects that merge innovation and practical problem-solving.</p>
+                    <p>Outside of coding, I enjoy participating in tech symposiums and pushing the limits of my learning through challenges and collaboration.</p>
+                </div>
+                <aside class="skills-list">
+                    <h3>Technical Skills</h3>
+                    <ul>
+                        <li>Java</li>
+                        <li>Python</li>
+                        <li>SQL</li>
+                        <li>Linux</li>
+                        <li>Git</li>
+                        <li>HTML & CSS</li>
+                        <li>JavaScript</li>
+                        <li>MERN Stack</li>
+                        <li>Postman</li>
+                    </ul>
+                </aside>
+            </div>
+        </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project-card">
-      <h3>MedGenie - A Virtual Doctor</h3>
-      <p>An AI-Driven Healthcare assistant providing diagnosis support using intelligent algorithms for accessible and affordable medical services.</p>
-    </div>
-    <div class="project-card">
-      <h3>Voice Control Humanoid Robot</h3>
-      <p>A robot that responds to spoken commands, enhancing human-robot interaction through voice recognition systems.</p>
-    </div>
-    <div class="project-card">
-      <h3>Phishing Detection using Honeypot</h3>
-      <p>Built a honeypot system to detect phishing patterns, analyze suspicious activities, and notify users via email alerts.</p>
-    </div>
-  </section>
+        <section id="projects">
+            <h2>Featured Projects</h2>
+            <div class="projects-grid">
 
-  <section id="achievements">
-    <h2>Achievements</h2>
-    <ul>
-      <li>🥇 1st Place - Cypher Chase, GENESIS’24 at SRM University</li>
-      <li>🏅 Special Mention - Algorithm Auction, Mind Spark 2025</li>
-    </ul>
-  </section>
+                <article class="project-card">
+                    <div class="project-header">
+                        <h3>MEDGENIE - A Virtual Doctor</h3>
+                    </div>
+                    <div class="project-content">
+                        <p>AI-powered healthcare solution that assists medical professionals in diagnosing and treating patients. MEDGENIE ensures accessible and affordable medical services for all.</p>
+                        <div class="project-tags">
+                            <span class="tag">AI</span>
+                            <span class="tag">Healthcare</span>
+                            <span class="tag">Virtual Assistant</span>
+                        </div>
+                    </div>
+                </article>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>📍 Chennai, India</p>
-    <p>📧 <a href="mailto:2005sujann@gmail.com">2005sujann@gmail.com</a></p>
-    <p>📞 <a href="tel:+917010118499">+91 70101 18499</a></p>
-    <p>🔗 <a href="https://www.linkedin.com/in/sujan-narayanan-a6013825a/" target="_blank">LinkedIn Profile</a></p>
-  </section>
+                <article class="project-card">
+                    <div class="project-header">
+                        <h3>Voice Control Humanoid Robot</h3>
+                    </div>
+                    <div class="project-content">
+                        <p>Designed a voice-controlled humanoid robot that allows intuitive communication through spoken commands, enhancing human-robot interaction.</p>
+                        <div class="project-tags">
+                            <span class="tag">IoT</span>
+                            <span class="tag">Voice Recognition</span>
+                            <span class="tag">Robotics</span>
+                        </div>
+                    </div>
+                </article>
 
-  <footer>
-    <p>&copy; 2025 Sujan Narayanan. All rights reserved.</p>
-  </footer>
+                <article class="project-card">
+                    <div class="project-header">
+                        <h3>Phishing Detection using Honeypot</h3>
+                    </div>
+                    <div class="project-content">
+                        <p>Created a honeypot-based detection system to identify phishing patterns and suspicious behavior, alerting users via email.</p>
+                        <div class="project-tags">
+                            <span class="tag">Cybersecurity</span>
+                            <span class="tag">Email Alerts</span>
+                            <span class="tag">Honeypot</span>
+                        </div>
+                    </div>
+                </article>
+
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Get In Touch</h2>
+            <div class="contact-content">
+                <div class="contact-info">
+                    <h3>Let's Connect</h3>
+                    <p>Open to internships, collaborations, and tech discussions! Feel free to reach out to me about opportunities or interesting projects.</p>
+                    <ul class="contact-details">
+                        <li><strong>Email:</strong> 2005sujann@gmail.com</li>
+                        <li><strong>Phone:</strong> +91 70101 18499</li>
+                        <li><strong>Location:</strong> Chennai, India</li>
+                    </ul>
+                </div>
+
+                <form class="contact-form" method="post" action="#contact">
+                    <div class="form-group">
+                        <label for="name">Full Name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">Email Address</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="subject">Subject</label>
+                        <input type="text" id="subject" name="subject" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="6" required></textarea>
+                    </div>
+
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="social-links">
+            <a href="https://github.com/Sujan-302005">GitHub</a>
+            <a href="https://linkedin.com/in/sujan-narayanan-a6013825a/">LinkedIn</a>
+        </div>
+        <p>&copy; 2025 Sujan Narayanan.</p>
+    </footer>
 </body>
 </html>
